[gd_scene load_steps=4 format=3 uid="uid://b2ikybhon4pmr"]

[ext_resource type="Script" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/popup_Edit_Field_Values.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b0x40ln8a6syy" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="2"]
[ext_resource type="Theme" uid="uid://c521sxmdt64pl" path="res://addons/UDSEngine/Database_Manager/Theme and Style/main_30.tres" id="4"]

[node name="popup_Edit_Field_Values" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("4")
script = ExtResource("1")

[node name="PanelContainer" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.168627, 0.168627, 0.168627, 1)

[node name="VBox1" type="VBoxContainer" parent="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="Label" parent="PanelContainer/VBox1" instance=ExtResource("2")]
anchor_right = 0.0
offset_right = 900.0

[node name="Label_Button" parent="PanelContainer/VBox1/Label/HBox1" index="0"]
offset_bottom = 30.0
disabled = true
flat = true

[node name="Scroll1" type="ScrollContainer" parent="PanelContainer/VBox1"]
offset_top = 29.0
offset_right = 900.0
offset_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox1" type="VBoxContainer" parent="PanelContainer/VBox1/Scroll1"]
offset_right = 900.0
offset_bottom = 539.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox2" type="HBoxContainer" parent="PanelContainer/VBox1"]
offset_top = 572.0
offset_right = 900.0
offset_bottom = 600.0

[node name="Accept" type="Button" parent="PanelContainer/VBox1/HBox2"]
offset_right = 448.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Accept"

[node name="Cancel" type="Button" parent="PanelContainer/VBox1/HBox2"]
offset_left = 452.0
offset_right = 900.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Cancel"

[node name="Label2" type="Label" parent="PanelContainer/VBox1"]
visible = false
size_flags_vertical = 1

[connection signal="button_up" from="PanelContainer/VBox1/HBox2/Accept" to="." method="_on_Accept_button_up"]
[connection signal="button_up" from="PanelContainer/VBox1/HBox2/Cancel" to="." method="_on_Cancel_button_up"]

[editable path="PanelContainer/VBox1/Label"]
